test/spec_vectors/load64/fail/module_40.wat
(module (memory i64 1) (func (result f32) (f32.load (f32.const 0))))